--- a/style.css
+++ b/style.css
@@ -19,6 +19,8 @@ h1{
 	-moz-transition: background 0.6s;
 }
 .container{
+	width:550px;
+	margin: 0 auto;
 	max-width: 600px; /* sets the max width for the div containing the squares*/
 	margin: 0 auto; /*centers a div*/
 	padding-top:1.5%;
