--- a/style.css
+++ b/style.css
@@ -24,6 +24,7 @@ h1{
 	max-width: 600px; /* sets the max width for the div containing the squares*/
 	margin: 0 auto; /*centers a div*/
 	padding-top:1.5%;
+	height: 100%;
 	background: white;
 }
 
